// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Heading /> renders a H3 heading  1`] = `
.c0 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

<div>
  <h3
    class="c0"
  >
    Lorem Ipsum
  </h3>
</div>
`;

exports[`<PageTitle /> renders a H1 page title  1`] = `
.c2 {
  position: absolute;
  background-color: #7598d6;
  border-radius: 0.6rem;
  top: 0;
  left: 50%;
  width: 7rem;
  height: 0.4rem;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c1 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 3.2rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-top: 1.6rem;
}

.c0 {
  margin: 0 auto 1rem;
  margin-bottom: 4rem;
  text-align: center;
}

@media (max-width:600px) {
  .c0 {
    margin-bottom: 2.4rem;
  }
}

<div>
  <header
    class="c0"
  >
    <h1
      class="c1"
    >
      <div
        class="c2"
      />
      Lorem Ipsum
    </h1>
  </header>
</div>
`;

exports[`<Subtitle /> renders a subtitle  1`] = `
.c0 {
  display: block;
  margin: 0 0 1rem 0;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.2rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
  text-transform: uppercase;
}

<div>
  <span
    class="c0"
  >
    Lorem Ipsum
  </span>
</div>
`;

exports[`<Title /> renders a H2 title  1`] = `
.c2 {
  position: absolute;
  background-color: #7598d6;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c1 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 3.2rem;
  text-align: left;
}

.c0 {
  margin: 0 auto 1rem;
  text-align: left;
}

<div>
  <header
    class="c0"
  >
    <h2
      class="c1"
    >
      <div
        class="c2"
      />
      Lorem Ipsum
    </h2>
  </header>
</div>
`;
